import 'package:core_data/core_data.dart';

abstract interface class Journal<Event extends CoreEvent, State extends CoreState,
    View extends CoreView> {

}
